# kore-contract-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
docs/: contract.md
example/: Cargo.toml
example/src/: lib.rs
example2/: Cargo.toml
example2/src/: lib.rs
src/: error.rs  externf.rs  lib.rs  value_wrapper.rs
