[package]
name = "kore-contract-sdk"
version = "0.2.0"
edition = "2021"
authors = ["Kore Ledger, SL<dev@kore-ledger.net>"]
description = "Kore Ledger contract SDK"
readme = "../README.md"
homepage = "https://kore-ledger.net"
repository = "https://github.com/kore-ledger/kore-contract-sdk"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]
rust-version = "1.67"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.92"
json-patch = "2.0.0"
thiserror = "1.0.64"
borsh = { version = "1.5.1", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
