[package]
name = "kore-contract-sdk"
version = "0.3.0"
edition = "2021"
authors = ["Kore Ledger, SL<dev@kore-ledger.net>"]
description = "Kore Ledger contract SDK"
readme = "README.md"
homepage = "https://kore-ledger.net"
repository = "https://github.com/kore-ledger/kore-contract-sdk"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "kore", "sustainability"]
rust-version = "1.67"
documentation = "https://docs.rs/kore-contract-sdk"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
borsh = { version = "1.5.5", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "basic-example"
path = "./example"